fix 1 px visible with sidebars

--- a/app/static/styles/logo_and_links.css
+++ b/app/static/styles/logo_and_links.css
@@ -106,8 +106,8 @@ body:not(:-moz-handler-blocked) #anons {
 
 body .sidr {
   padding: 0px;
-  padding-top: 15px;
-  margin-top: 80px;
+  padding-top: 17px;
+  margin-top: 78px;
   width: 100%;
 
 }
